--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,10 +70,19 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-02-07 (v3.8.16) 预祝新年快乐！
+        <ul>
+          <li>春节期间事务繁多，更新可能延迟，敬请谅解。</li>
+          <li>新增了一种票纸：<var>红报销凭证（黑体居中，2023年新型）票纸</var>。</li>
+          <li>新增车站：<var>大虎山</var>、<var>砀山</var>、<var>淮北北</var>、<var>黄口</var>、<var>溧阳</var>、<var>罗源</var>、<var>如皋南</var>、<var>宿迁</var>、<var>涡阳</var>、<var>夏邑县</var>、<var>萧县</var>、<var>宜兴</var>、<var>肇庆东</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 816 个，机器数量达 2462 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-01-31 (v3.8.15)
         <ul>
           <li>春节临近，事务繁多，更新可能延迟，敬请谅解。</li>
-          <li>新增了一种票纸：蓝报销凭证（黑体居中，2023年新型）票纸。</li>
+          <li>新增了一种票纸：<var>蓝报销凭证（黑体居中，2023年新型）票纸</var>。</li>
           <li>新增车站：<var>抚远</var>、<var>金坛</var>、<var>蒲江</var>、<var>钦州东</var>、<var>引镇</var>。</li>
           <li>车站组总数达 31 个，车站总数达 803 个，机器数量达 2393 台。</li>
         </ul>
