--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,11 +61,20 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-02-07 (v3.8.16) 旧暦正月おめでとう！
+        <ul>
+          <li>春節事務が多く、更新が遅れる可能性がありますので、ご了承ください。</li>
+          <li>新しい券紙を追加：<var>赤領収書（ゴシック体居中，2023年新型）券紙</var>。</li>
+          <li>新しい駅：<var>大虎山</var>、<var>砀山</var>、<var>淮北北</var>、<var>黄口</var>、<var>溧陽</var>、<var>羅源</var>、<var>如皋南</var>、<var>宿迁</var>、<var>涡陽</var>、<var>夏邑県</var>、<var>萧県</var>、<var>宜興</var>、<var>肇慶東</var>。</li>
+          <li>記録した駅組 31 個、駅 816 個、機器 2462 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-01-31 (v3.8.15)
         <ul>
           <li>春節が近づき、事務が多く、更新が遅れる可能性がありますので、ご了承ください。</li>
           <li>新しい券紙を追加：<var>藍領収書（ゴシック体居中，2023年新型）券紙</var>。</li>
-          <li>新しい駅：<var>撫远</var>、<var>金壇</var>、<var>蒲江</var>、<var>欽州東</var>、<var>引鎮</var>。</li>
+          <li>新しい駅：<var>撫遠</var>、<var>金壇</var>、<var>蒲江</var>、<var>欽州東</var>、<var>引鎮</var>。</li>
           <li>記録した駅組 31 個、駅 803 個、機器 2393 個。</li>
         </ul>
       </li>
@@ -79,7 +88,7 @@
       <li class="list-group-item">
         2024-01-03 (v3.8.13) 新年あけましておめでとう！
         <ul>
-          <li>新しい駅：<var>常平東</var>、<var>東莞</var>、<var>広阳</var>、<var>広州白雲</var>、<var>淮南東</var>、<var>天府機場</var>（成都天府国際空港）、<var>資中北</var>。</li>
+          <li>新しい駅：<var>常平東</var>、<var>東莞</var>、<var>広陽</var>、<var>広州白雲</var>、<var>淮南東</var>、<var>天府機場</var>（成都天府国際空港）、<var>資中北</var>。</li>
           <li>記録した駅組 31 個、駅 792 個、機器 2335 個。</li>
         </ul>
       </li>
@@ -131,7 +140,7 @@
         <ul>
           <li>「一記録に複数の券」を指示。</li>
           <li>一部の翻訳を調整。</li>
-          <li>新しい駅：<var>简阳南</var>、<var>新都東</var>、<var>鹰手营子</var>。</li>
+          <li>新しい駅：<var>简陽南</var>、<var>新都東</var>、<var>鹰手营子</var>。</li>
           <li>記録した駅組 30 個、駅 754 個、機器 2189 個。</li>
         </ul>
       </li>
@@ -169,7 +178,7 @@
         <ul>
           <li>「券紙統計」を導入。自動的に生成されたので、ご参考まで。</li>
           <li>券紙、タグ、状態変化などに関する一部の表記を調整。</li>
-          <li>新しい駅：<var>城固</var>、<var>恩平</var>、<var>个旧</var>、<var>鹤壁東</var>、<var>紅島</var>、<var>紅河</var>、<var>鄠邑</var>、<var>淮安</var>、<var>绩溪県</var>、<var>剑門関</var>、<var>开平南</var>、<var>乐平市</var>、<var>墨江</var>、<var>宁洱</var>、<var>攀枝花南</var>、<var>邳州東</var>、<var>屏辺</var>、<var>祁門</var>、<var>青铜峡</var>、<var>渠県</var>、<var>歙県</var>、<var>四合永</var>、<var>台前</var>、<var>西安西</var>、<var>西昌西</var>、<var>萧県北</var>、<var>宣城</var>、<var>阳平関</var>、<var>榆次</var>、<var>元江</var>、<var>治江</var>。</li>
+          <li>新しい駅：<var>城固</var>、<var>恩平</var>、<var>个旧</var>、<var>鹤壁東</var>、<var>紅島</var>、<var>紅河</var>、<var>鄠邑</var>、<var>淮安</var>、<var>绩溪県</var>、<var>剑門関</var>、<var>开平南</var>、<var>乐平市</var>、<var>墨江</var>、<var>宁洱</var>、<var>攀枝花南</var>、<var>邳州東</var>、<var>屏辺</var>、<var>祁門</var>、<var>青铜峡</var>、<var>渠県</var>、<var>歙県</var>、<var>四合永</var>、<var>台前</var>、<var>西安西</var>、<var>西昌西</var>、<var>萧県北</var>、<var>宣城</var>、<var>陽平関</var>、<var>榆次</var>、<var>元江</var>、<var>治江</var>。</li>
           <li>記録した駅組 30 個、駅 740 個、機器 2111 個。</li>
         </ul>
       </li>
@@ -309,7 +318,7 @@
         2022-10-30 (v3.6.1)
         <ul>
           <li>コードを調整。</li>
-          <li>新しい駅：<var>保山</var>、<var>恩施</var>、<var>富源</var>、<var>黄石北</var>、<var>黄石東</var>、<var>陸良</var>、<var>曲靖</var>、<var>曲靖北</var>、<var>巍山</var>、<var>襄阳東</var>、<var>祥雲</var>、<var>小湾東</var>、<var>鐘祥</var>、<var>遵義</var>。</li>
+          <li>新しい駅：<var>保山</var>、<var>恩施</var>、<var>富源</var>、<var>黄石北</var>、<var>黄石東</var>、<var>陸良</var>、<var>曲靖</var>、<var>曲靖北</var>、<var>巍山</var>、<var>襄陽東</var>、<var>祥雲</var>、<var>小湾東</var>、<var>鐘祥</var>、<var>遵義</var>。</li>
         </ul>
       </li>
       <li class="list-group-item">
@@ -364,7 +373,7 @@
         2022-07-03(v3.4.3)
         <ul>
         <li>
-          新しい駅：<var>奉節</var>、<var>焦作西</var>、<var>臨河</var>、<var>宁陵県</var>、<var>濮阳東</var>、<var>神農架</var>、<var>巫山</var>、<var>浠水</var>、<var>雲阳</var>、<var>鄭州航空港</var>。
+          新しい駅：<var>奉節</var>、<var>焦作西</var>、<var>臨河</var>、<var>宁陵県</var>、<var>濮陽東</var>、<var>神農架</var>、<var>巫山</var>、<var>浠水</var>、<var>雲陽</var>、<var>鄭州航空港</var>。
         </li>
           <li>一部駅の情報を調整。</li>
           <li>一部データの失効原因を明らかにした。</li>
@@ -446,7 +455,7 @@
         <ul>
           <li>誤解されないように、今度は年分の表示は簡略にさせなかったこと。</li>
           <li>一部の駅組には拼音・翻訳・転写等の情報を追加。</li>
-          <li>新しい駅：<var>洛阳龍門</var></li>
+          <li>新しい駅：<var>洛陽龍門</var></li>
         </ul>
       </li>
       <li class="list-group-item">
@@ -592,7 +601,7 @@
         2021-07-08(v3.0.0-alpha)
         <ul>
         <li>
-          新しい駅：<var>大連</var>、<var>合肥北城</var>、<var>林芝</var>、<var>水家湖</var>、<var>台州西</var>、<var>太倉</var>、<var>天祝</var>、<var>武威南</var>、<var>咸阳西</var>、<var>永登</var>
+          新しい駅：<var>大連</var>、<var>合肥北城</var>、<var>林芝</var>、<var>水家湖</var>、<var>台州西</var>、<var>太倉</var>、<var>天祝</var>、<var>武威南</var>、<var>咸陽西</var>、<var>永登</var>
         </li>
           <li>新しい仮想駅：<var>鄭州客運段</var></li>
           <li>新しい駅組：<var>合福高速線(線路)</var>、<var>金温貨線(線路)</var>、<var>金温線(線路)</var></li>
@@ -643,7 +652,7 @@
         <ul>
           <li>「卒業季」ですから、更新頻度はやや下がった。</li>
         <li>
-          新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>徳惠</var>、<var>徳州</var>、<var>阜寧</var>、<var>阜寧南</var>、<var>海安</var>、<var>薊州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var>
+          新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>徳惠</var>、<var>徳州</var>、<var>阜寧</var>、<var>阜寧南</var>、<var>海安</var>、<var>薊州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射陽</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var>
         </li>
           <li>記録した駅は499個、機器は1263個。</li>
         </ul>
@@ -651,7 +660,7 @@
       <li class="list-group-item">
         2021-05-10(v2.3.8)
         <ul>
-          <li>新しい駅：<var>沧州西</var>、<var>東台</var>、<var>鄂州</var>、<var>阜阳西</var>、<var>十渡</var>、<var>苏州北</var></li>
+          <li>新しい駅：<var>沧州西</var>、<var>東台</var>、<var>鄂州</var>、<var>阜陽西</var>、<var>十渡</var>、<var>苏州北</var></li>
         </ul>
       </li>
       <li class="list-group-item">
@@ -668,7 +677,7 @@
         <ul>
           <li>新しい駅：<var>大冶北</var>、<var>華山北</var></li>
         <li>
-          新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>撫顺線(線路)</var>、<var>広九線(線路)</var>、<var>広深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>遼寧沈阳(城市)</var>、<var>沈丹客専線(線路)</var>
+          新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>撫顺線(線路)</var>、<var>広九線(線路)</var>、<var>広深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>遼寧沈陽(城市)</var>、<var>沈丹客専線(線路)</var>
         </li>
         </ul>
       </li>
@@ -747,13 +756,13 @@
       <li class="list-group-item">
         2021-03-02(Version 2021-02-28, v2.2.1):
       <ul>
-        <li>新しい駅：大港南、当阳、阜阳</li>
+        <li>新しい駅：大港南、当陽、阜陽</li>
       </ul>
       </li>
       <li class="list-group-item">
         2021-02-18(v2.2.0pre OR v2.1.3):
         <ul>
-          <li>新しい駅：北京朝阳、長治東、丹阳、晋城、晋城東、汤逊湖、銅陵、西華、鄢陵。</li>
+          <li>新しい駅：北京朝陽、長治東、丹陽、晋城、晋城東、汤逊湖、銅陵、西華、鄢陵。</li>
           <li>歴史記録を維持する為に新しい駅記録を作成：清華园</li>
           <li>駅組案内を作成。新規作成した駅組は：北京(城市)、北京(其他車站)、重慶(城市)、福建福州(城市)、河南鄭州(城市)、河南鄭州(同城站)、湖北武漢(城市)、湖北武漢(同城站)、上海(城市)。</li>
           <li>駅リストを再排、辞書序に排列。</li>
