--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -186,6 +186,7 @@
             <option value="41">第1类红票宋体居中票纸</option>
             <option value="45">红票宋体左对齐票纸（旧版）</option>
             <option value="49">红票宋体左对齐票纸（人民日报广告）</option>
+            <option value="62">红报销凭证（黑体居中，2023年新型）票纸</option>
             <option value="59">其他红票票纸</option>
           </optgroup>
           <optgroup label="其他（信息单、未知）" data-red="2">
