--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -85,16 +85,16 @@
     <h2>趋势榜 <small class="text-muted" lang="en">Trend List</small></h2>
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-      <tr><td>1</td><td>郑州东</td><td>60</td><td>83</td></tr>
-      <tr><td>2</td><td>南京南</td><td>56</td><td>77</td></tr>
+      <tr><td>1</td><td>郑州东</td><td>60</td><td>84</td></tr>
+      <tr><td>2</td><td>南京南</td><td>57</td><td>86</td></tr>
       <tr><td>3</td><td>长春</td><td>54</td><td>69</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>73</td></tr>
-      <tr><td>5</td><td>北京南</td><td>49</td><td>58</td></tr>
-      <tr><td>6</td><td>北京西</td><td>37</td><td>48</td></tr>
-      <tr><td>7</td><td>杭州东</td><td>36</td><td>42</td></tr>
-      <tr><td>8</td><td>盐城</td><td>34</td><td>40</td></tr>
+      <tr><td>5</td><td>北京南</td><td>50</td><td>59</td></tr>
+      <tr><td>6</td><td>盐城</td><td>38</td><td>45</td></tr>
+      <tr><td>7</td><td>北京西</td><td>37</td><td>48</td></tr>
+      <tr><td>8</td><td>杭州东</td><td>36</td><td>42</td></tr>
       <tr><td>9</td><td>兰州</td><td>32</td><td>45</td></tr>
-      <tr><td>10</td><td>南京</td><td>30</td><td>39</td></tr>
+      <tr><td>10</td><td>徐州东</td><td>31</td><td>40</td></tr>
     </table>
   </div>
   <div class="container my-3">
@@ -139,12 +139,12 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-01-31 (v3.8.15)
+        2024-02-07 (v3.8.16) 预祝新年快乐！
         <ul>
-          <li>春节临近，事务繁多，更新可能延迟，敬请谅解。</li>
-          <li>新增了一种票纸：<var>蓝报销凭证（黑体居中，2023年新型）票纸</var>。</li>
-          <li>新增车站：<var>抚远</var>、<var>金坛</var>、<var>蒲江</var>、<var>钦州东</var>、<var>引镇</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 803 个，机器数量达 2393 台。</li>
+          <li>春节期间事务繁多，更新可能延迟，敬请谅解。</li>
+          <li>新增了一种票纸：<var>红报销凭证（黑体居中，2023年新型）票纸</var>。</li>
+          <li>新增车站：<var>大虎山</var>、<var>砀山</var>、<var>淮北北</var>、<var>黄口</var>、<var>溧阳</var>、<var>罗源</var>、<var>如皋南</var>、<var>宿迁</var>、<var>涡阳</var>、<var>夏邑县</var>、<var>萧县</var>、<var>宜兴</var>、<var>肇庆东</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 816 个，机器数量达 2462 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
