--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,14 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-02-18 (v3.8.17) 新年快乐！
+        <ul>
+          <li>新增LED和贴纸编号标签。</li>
+          <li>新增车站：<var>惠阳</var>、<var>双鸭山</var>、<var>新干</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 819 个，机器数量达 2499 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-02-07 (v3.8.16) 预祝新年快乐！
         <ul>
           <li>春节期间事务繁多，更新可能延迟，敬请谅解。</li>
