--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,14 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-02-18 (v3.8.17) 旧暦正月おめでとう！
+        <ul>
+          <li>LEDと貼り紙番号タグを追加。</li>
+          <li>新しい駅：<var>惠陽</var>、<var>双鴨山</var>、<var>新干</var>。</li>
+          <li>記録した駅組 31 個、駅 819 個、機器 2499 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-02-07 (v3.8.16) 旧暦正月おめでとう！
         <ul>
           <li>春節事務が多く、更新が遅れる可能性がありますので、ご了承ください。</li>
