--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -85,7 +85,7 @@
     <h2>趋势榜 <small class="text-muted" lang="en">Trend List</small></h2>
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-      <tr><td>1</td><td>郑州东</td><td>60</td><td>84</td></tr>
+      <tr><td>1</td><td>郑州东</td><td>68</td><td>93</td></tr>
       <tr><td>2</td><td>南京南</td><td>57</td><td>86</td></tr>
       <tr><td>3</td><td>长春</td><td>54</td><td>69</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>73</td></tr>
@@ -139,12 +139,11 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-02-07 (v3.8.16) 预祝新年快乐！
+        2024-02-18 (v3.8.17) 新年快乐！
         <ul>
-          <li>春节期间事务繁多，更新可能延迟，敬请谅解。</li>
-          <li>新增了一种票纸：<var>红报销凭证（黑体居中，2023年新型）票纸</var>。</li>
-          <li>新增车站：<var>大虎山</var>、<var>砀山</var>、<var>淮北北</var>、<var>黄口</var>、<var>溧阳</var>、<var>罗源</var>、<var>如皋南</var>、<var>宿迁</var>、<var>涡阳</var>、<var>夏邑县</var>、<var>萧县</var>、<var>宜兴</var>、<var>肇庆东</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 816 个，机器数量达 2462 台。</li>
+          <li>新增LED和贴纸编号标签。</li>
+          <li>新增车站：<var>惠阳</var>、<var>双鸭山</var>、<var>新干</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 819 个，机器数量达 2499 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
