--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -241,6 +241,24 @@
           </div>
           <p class="mb-3 form-text" id="selOpenHour-desc">如果该机器标注了开放时间，请按照标准填写此项。</p>
         </div>
+        <div class="col">
+          <div class="input-group">
+            <span id="selSticker-lbl" class="input-group-text">贴纸：</span>
+            <input type="text" class="form-control" id="selSticker"
+              aria-describedby="selSticker-desc"
+              placeholder="例如：售票1-14" title="请输入机器贴纸上的编号。">
+          </div>
+          <p class="mb-3 form-text" id="selSticker-desc">如果该机器具有贴纸，请填写此项。</p>
+        </div>
+        <div class="col">
+          <div class="input-group">
+            <span id="selScreen-lbl" class="input-group-text">LED指示：</span>
+            <input type="text" class="form-control" id="selScreen"
+              aria-describedby="selScreen-desc"
+              placeholder="例如：1" title="请输入机器LED指示牌上的编号。">
+          </div>
+          <p class="mb-3 form-text" id="selScreen-desc">如果该机器具有LED指示牌，请填写此项。</p>
+        </div>
       </div>
       <div class="mb-3 g-2">
         票机功能信息：
