--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -6,8 +6,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="keyword" content="运转大数据" />
-  <link rel="stylesheet" href="https://cdn.staticfile.org/bootstrap/5.2.3/css/bootstrap.min.css">
-  <script src="https://cdn.staticfile.org/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
+  <link rel="stylesheet" href="https://cdn.staticfile.net/bootstrap/5.2.3/css/bootstrap.min.css">
+  <script src="https://cdn.staticfile.net/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
   <style>
     body{padding-top:4em;}img.ptimg{width:300px;max-width:100%;height:auto}p.score span.s0lt1,p.score span.s1lt1{color:red!important}p.score span.s1lt2,p.score span.s2lt1,p.score span.s2lt2,p.score span.s3lt1,p.score span.s4lt2{color:#ff0!important}p.score span.s4lt1,p.score span.s5lt1{color:#3f3!important}p.score span.s0lt2,p.score span.s3lt2,p.score span.s5lt2{color:transparent!important}
   </style>
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-02-29 (v3.8.18)
+        <ul>
+          <li>新增车站：<var>崇左南</var>、<var>河池西</var>、<var>金城江</var>、<var>荔波</var>、<var>龙洞堡</var>、<var>潼关</var>、<var>延安</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 826 个，机器数量达 2527 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-02-18 (v3.8.17) 新年快乐！
         <ul>
           <li>新增LED和贴纸编号标签。</li>
