--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -9,15 +9,15 @@
   <meta name="keyword" content="运转大数据">
   <meta name="description" content="运转大数据，售票机使用体验">
   <!--Polyfills BEGIN-->
-  <script nomodule src="https://cdn.staticfile.org/es5-shim/4.6.7/es5-shim.min.js"></script>
-  <script nomodule src="https://cdn.staticfile.org/es5-shim/4.6.7/es5-sham.min.js"></script>
+  <script nomodule src="https://cdn.staticfile.net/es5-shim/4.6.7/es5-shim.min.js"></script>
+  <script nomodule src="https://cdn.staticfile.net/es5-shim/4.6.7/es5-sham.min.js"></script>
   <!--Polyfills END-->
   <!--<link rel="stylesheet" href="./js/bootstrap.min.css">-->
-  <link rel="stylesheet" href="https://cdn.staticfile.org/bootstrap/5.2.3/css/bootstrap.min.css">
-  <link rel="preload" href="https://cdn.staticfile.org/font-awesome/6.4.0/js/solid.min.js" type="text/javascript" as="script">
-  <link rel="preload" href="https://cdn.staticfile.org/font-awesome/6.4.0/js/brands.min.js" type="text/javascript" as="script">
-  <link rel="preload" href="https://cdn.staticfile.org/font-awesome/6.4.0/js/fontawesome.min.js" type="text/javascript" as="script">
-  <script src="https://cdn.staticfile.org/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
+  <link rel="stylesheet" href="https://cdn.staticfile.net/bootstrap/5.2.3/css/bootstrap.min.css">
+  <link rel="preload" href="https://cdn.staticfile.net/font-awesome/6.4.0/js/solid.min.js" type="text/javascript" as="script">
+  <link rel="preload" href="https://cdn.staticfile.net/font-awesome/6.4.0/js/brands.min.js" type="text/javascript" as="script">
+  <link rel="preload" href="https://cdn.staticfile.net/font-awesome/6.4.0/js/fontawesome.min.js" type="text/javascript" as="script">
+  <script src="https://cdn.staticfile.net/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
   <script src="./js/tkt_type.min.js"></script>
   <!-- Nim BEGIN -->
   <link rel="preload" href="./js/aboutPage.min.js" type="text/javascript" as="script">
@@ -77,15 +77,15 @@
     <script src="./js/aboutPageData.min.js" defer></script>
     <article class="container m-1" id="react_container_persons"></article>
     <script src="./js/aboutPage.min.js" defer></script>
-    <script defer src="https://cdn.staticfile.org/font-awesome/6.4.0/js/solid.min.js"></script>
-    <script defer src="https://cdn.staticfile.org/font-awesome/6.4.0/js/brands.min.js"></script>
-    <script defer src="https://cdn.staticfile.org/font-awesome/6.4.0/js/fontawesome.min.js"></script>
+    <script defer src="https://cdn.staticfile.net/font-awesome/6.4.0/js/solid.min.js"></script>
+    <script defer src="https://cdn.staticfile.net/font-awesome/6.4.0/js/brands.min.js"></script>
+    <script defer src="https://cdn.staticfile.net/font-awesome/6.4.0/js/fontawesome.min.js"></script>
   </div>
   <div class="container my-3">
     <h2>趋势榜 <small class="text-muted" lang="en">Trend List</small></h2>
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-      <tr><td>1</td><td>郑州东</td><td>68</td><td>93</td></tr>
+      <tr><td>1</td><td>郑州东</td><td>68</td><td>94</td></tr>
       <tr><td>2</td><td>南京南</td><td>57</td><td>86</td></tr>
       <tr><td>3</td><td>长春</td><td>54</td><td>69</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>73</td></tr>
@@ -139,11 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-02-18 (v3.8.17) 新年快乐！
+        2024-02-29 (v3.8.18)
         <ul>
-          <li>新增LED和贴纸编号标签。</li>
-          <li>新增车站：<var>惠阳</var>、<var>双鸭山</var>、<var>新干</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 819 个，机器数量达 2499 台。</li>
+          <li>新增车站：<var>崇左南</var>、<var>河池西</var>、<var>金城江</var>、<var>荔波</var>、<var>龙洞堡</var>、<var>潼关</var>、<var>延安</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 826 个，机器数量达 2527 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
