--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -7,14 +7,14 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!--Polyfills BEGIN-->
-  <script nomodule src="https://cdn.staticfile.org/es6-shim/0.35.6/es6-shim.min.js"></script>
-  <script nomodule src="https://cdn.staticfile.org/promise-polyfill/8.2.3/polyfill.min.js"></script>
+  <script nomodule src="https://cdn.staticfile.net/es6-shim/0.35.6/es6-shim.min.js"></script>
+  <script nomodule src="https://cdn.staticfile.net/promise-polyfill/8.2.3/polyfill.min.js"></script>
   <!--Polyfills END-->
-  <link rel="stylesheet" href="https://cdn.staticfile.org/bootstrap/5.2.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/fontawesome.min.css">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/solid.min.css">
-  <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.staticfile.org/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
+  <link rel="stylesheet" href="https://cdn.staticfile.net/bootstrap/5.2.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.staticfile.net/font-awesome/5.13.1/css/fontawesome.min.css">
+  <link rel="stylesheet" href="https://cdn.staticfile.net/font-awesome/5.13.1/css/solid.min.css">
+  <script src="https://cdn.staticfile.net/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.staticfile.net/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
   <script src="./js/tkt_type.min.js"></script>
   <style>
     body {padding-top: 4em;}img.ptimg{width:300px;max-width:100%;height:auto}.s0lt1,.s1lt1{color:red!important}.s1lt2,.s2lt1,.s2lt2,.s3lt1,.s4lt2{color:#ff0!important}.s4lt1,.s5lt1{color:#3f3!important}.s0lt2,.s3lt2,.s5lt2{color:transparent!important}a.promo{word-break: break-all}
