Update HAM tools

--- a/index.html
+++ b/index.html
@@ -95,15 +95,41 @@
           <a href="https://my.flightradar24.com/firetimer"><img src="https://banners-my.flightradar24.com/firetimer.png" alt="My Flightdiary.net profile" /></a>
           </p>
 
+          <h3>
+          <a id="ham-tools" class="anchor" href="#ham-tools" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HAM tools
+          </h3>
+
           <!-- HRDLOG.net script start -->
           <div id="hrdlog">www.hrdlog.net</div>
-          <script type="text/javascript" language="javascript" src="http://www.hrdlog.net/hrdlog.js"></script>
-          <script type="text/javascript" language="javascript">
+          <script type="text/javascript" src="http://www.hrdlog.net/hrdlog.js"></script>
+          <script type="text/javascript">
           var ohrdlog = new HrdLog('BI1MHK');
           ohrdlog.LoadByCallsign();
           ohrdlog.LoadLastQso(10);
           </script>
           <!-- HRDLOG.net script stop -->
+          <!-- eQSL.cc -->
+          <div>
+            <ul>
+              <li><a href="https://www.eQSL.cc/Member.cfm?BI1MHK">My eQSL profile - BI1MHK</a></li>
+              <li><a href="https://www.qrz.com/db/bi1mhk">My QRZ.com profile</a></li>
+            </ul>
+            <FORM METHOD="Post" ACTION="https://www.eQSL.cc/qslcard/eQSLSearch.cfm">
+              <INPUT TYPE="HIDDEN" NAME="ReferredBy" VALUE="BI1MHK">
+              <TABLE BORDER="0" WIDTH="130">
+              <TR><TD WIDTH="130" BGCOLOR="BLUE">
+              <DIV ALIGN="CENTER">
+              <IMG SRC="https://www.eQSL.cc/Graphics/eQSLSearch.gif" WIDTH="130" HEIGHT="39" ALT="Enter your callsign to see if you have an eQSL waiting!" BORDER=0>
+              <BR>
+              <INPUT TYPE="TEXT" NAME="Callsign" SIZE="6">
+              <INPUT TYPE="SUBMIT" VALUE="Search">
+              <BR>
+              <IMG SRC="https://www.eQSL.cc/Graphics/eQSLSearch1.gif" WIDTH="130" HEIGHT="20" BORDER=0>
+              </DIV>
+              </TD></TR>
+              </TABLE>
+            </FORM>
+          </div>
         </article>
       </div>
     </div>
