--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-03-11 (v3.8.19)
+        <ul>
+          <li>新增车站：<var>大英东</var>、<var>横琴</var>、<var>虎门东</var>、<var>深圳机场北</var>、<var>什邡西</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 831 个，机器数量达 2540 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-02-29 (v3.8.18)
         <ul>
           <li>新增车站：<var>崇左南</var>、<var>河池西</var>、<var>金城江</var>、<var>荔波</var>、<var>龙洞堡</var>、<var>潼关</var>、<var>延安</var>。</li>
