--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-03-11 (v3.8.19)
+        <ul>
+          <li>新駅：<var>大英東</var>、<var>横琴</var>、<var>虎門東</var>、<var>深圳機場北</var>（深圳宝安国際空港北）、<var>什邡西</var>。</li>
+          <li>記録した駅組 31 個、駅 831 個、機器 2540 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-02-29 (v3.8.18)
         <ul>
           <li>新駅：<var>崇左南</var>、<var>河池西</var>、<var>金城江</var>、<var>荔波</var>、<var>龍洞堡</var>、<var>潼関</var>、<var>延安</var>。</li>
