--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -54,7 +54,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 1 月 31 日版本</a></p>
+    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 2 月 29 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -139,10 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-02-29 (v3.8.18)
+        2024-03-11 (v3.8.19)
         <ul>
-          <li>新增车站：<var>崇左南</var>、<var>河池西</var>、<var>金城江</var>、<var>荔波</var>、<var>龙洞堡</var>、<var>潼关</var>、<var>延安</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 826 个，机器数量达 2527 台。</li>
+          <li>新增车站：<var>大英东</var>、<var>横琴</var>、<var>虎门东</var>、<var>深圳机场北</var>、<var>什邡西</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 831 个，机器数量达 2540 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
