--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,15 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-03-30 (v3.8.20)
+        <ul>
+          <li>因学业原因，近期本站更新可能变慢。未能及时更新的数据将在本年6月后集中处理。</li>
+          <li>对质量评分标准进行了细化。</li>
+          <li>新增车站：<var>固始</var>、<var>霍邱</var>、<var>纪家沟</var>、<var>江油北</var>、<var>平湖</var>、<var>青川</var>、<var>万源</var>、<var>小金口</var>、<var>新塘</var>、<var>新塘南</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 841 个，机器数量达 2577 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-03-11 (v3.8.19)
         <ul>
           <li>新增车站：<var>大英东</var>、<var>横琴</var>、<var>虎门东</var>、<var>深圳机场北</var>、<var>什邡西</var>。</li>
