--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,15 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-03-30 (v3.8.20)
+        <ul>
+          <li>学業上の理由で、最近当サイトの更新が遅くなる可能性があります。適時に更新できなかったデータは、本年6月以降に集中的に処理されます。</li>
+          <li>券売機評価基準を細分化した。</li>
+          <li>新駅：<var>固始</var>、<var>霍邱</var>、<var>紀家溝</var>、<var>江油北</var>、<var>平湖</var>、<var>青川</var>、<var>万源</var>、<var>小金口</var>、<var>新塘</var>、<var>新塘南</var>。</li>
+          <li>記録した駅組 31 個、駅 841 個、機器 2577 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-03-11 (v3.8.19)
         <ul>
           <li>新駅：<var>大英東</var>、<var>横琴</var>、<var>虎門東</var>、<var>深圳機場北</var>（深圳宝安国際空港北）、<var>什邡西</var>。</li>
