--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -54,7 +54,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 2 月 29 日版本</a></p>
+    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 3 月 30 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -103,8 +103,8 @@
       <small class="text-muted" lang="en">Quality Evaluation Criterion</small>
     </h2>
     <ul class="list-group">
-      <li class="list-group-item list-group-item-danger">0分/极差：刚出票即有瑕疵，半年左右即模糊不清，并有缺失、白条等。</li>
-      <li class="list-group-item list-group-item-warning">1分/很差：一年左右即模糊不清，缺失、白条等多种缺陷。</li>
+      <li class="list-group-item list-group-item-danger">0分/极差：刚出票即有较多信息缺失、二维码无法识别，并伴有印刷模糊、严重歪斜等多种缺陷；或半年左右即模糊不清难以辨识，并有关键信息缺失、白条等。</li>
+      <li class="list-group-item list-group-item-warning">1分/很差：刚出票即有明显缺失，关键信息尚可辨识，并伴有印刷模糊、歪斜、白条等缺陷；或一年左右即模糊不清难以辨识，缺失、白条等多种缺陷。</li>
       <li class="list-group-item list-group-item-warning">2分/略差：略有模糊、白条、缺失，略有不整齐；或两年后褪色明显的。</li>
       <li class="list-group-item list-group-item-info">3分/尚可：半年左右仍清晰可认，无白条。两年后应仍可明显辨认。（新打印车票 清晰锐利，无白条、缺失，但采用易褪色类票纸的；或 有极少量难以分辨、不影响整体质量的缺失的 可参考此等级）</li>
       <li class="list-group-item list-group-item-success">4分/佳：一年仍清晰锐利，无白条、缺失。（新打印车票 清晰锐利，无白条、缺失且未采用易褪色类票纸的 可参考此等级）</li>
@@ -139,10 +139,12 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-03-11 (v3.8.19)
+        2024-03-30 (v3.8.20)
         <ul>
-          <li>新增车站：<var>大英东</var>、<var>横琴</var>、<var>虎门东</var>、<var>深圳机场北</var>、<var>什邡西</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 831 个，机器数量达 2540 台。</li>
+          <li>因学业原因，近期本站更新可能变慢。未能及时更新的数据将在本年6月后集中处理。</li>
+          <li>对质量评分标准进行了细化。</li>
+          <li>新增车站：<var>固始</var>、<var>霍邱</var>、<var>纪家沟</var>、<var>江油北</var>、<var>平湖</var>、<var>青川</var>、<var>万源</var>、<var>小金口</var>、<var>新塘</var>、<var>新塘南</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 841 个，机器数量达 2577 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
