Simple page for qsls

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
           <p lang="en">
             A HAM logger <code>KinaRailLogger</code>. Under development.
           </p>
+          <p lang="en">
+            Personal Amateur Radio Station <code>BI1MHK</code>. <a href="./qsl.html">A simple page here.</a>
+          </p>
 
           <p>
           <a href="https://my.flightradar24.com/firetimer"><img src="https://banners-my.flightradar24.com/firetimer.png" alt="My Flightdiary.net profile" /></a>
