--- a/qsl.html
+++ b/qsl.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hans">
 
 <head>
-  <title>QSL informations</title>
+  <title>QSL information</title>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
