--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-04-16 (v3.8.21)
+        <ul>
+          <li>新增车站：<var>荆州</var>、<var>酒泉</var>、<var>乐山北</var>、<var>威远</var>、<var>野三关</var>、<var>资中西</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 847 个，机器数量达 2600 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-03-30 (v3.8.20)
         <ul>
           <li>因学业原因，近期本站更新可能变慢。未能及时更新的数据将在本年6月后集中处理。</li>
