--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -90,11 +90,11 @@
       <tr><td>3</td><td>长春</td><td>54</td><td>69</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>73</td></tr>
       <tr><td>5</td><td>北京南</td><td>50</td><td>59</td></tr>
-      <tr><td>6</td><td>盐城</td><td>38</td><td>45</td></tr>
+      <tr><td>6</td><td>盐城</td><td>38</td><td>48</td></tr>
       <tr><td>7</td><td>北京西</td><td>37</td><td>48</td></tr>
       <tr><td>8</td><td>杭州东</td><td>36</td><td>42</td></tr>
       <tr><td>9</td><td>兰州</td><td>32</td><td>45</td></tr>
-      <tr><td>10</td><td>徐州东</td><td>31</td><td>40</td></tr>
+      <tr><td>10</td><td>徐州东</td><td>32</td><td>41</td></tr>
     </table>
   </div>
   <div class="container my-3">
@@ -139,12 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-03-30 (v3.8.20)
+        2024-04-16 (v3.8.21)
         <ul>
-          <li>因学业原因，近期本站更新可能变慢。未能及时更新的数据将在本年6月后集中处理。</li>
-          <li>对质量评分标准进行了细化。</li>
-          <li>新增车站：<var>固始</var>、<var>霍邱</var>、<var>纪家沟</var>、<var>江油北</var>、<var>平湖</var>、<var>青川</var>、<var>万源</var>、<var>小金口</var>、<var>新塘</var>、<var>新塘南</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 841 个，机器数量达 2577 台。</li>
+          <li>新增车站：<var>荆州</var>、<var>酒泉</var>、<var>乐山北</var>、<var>威远</var>、<var>野三关</var>、<var>资中西</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 847 个，机器数量达 2600 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
