--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-04-30 (v3.8.22)
+        <ul>
+          <li>新增车站：<var>花山镇</var>、<var>金口河南</var>、<var>乐同</var>、<var>清城</var>、<var>狮岭</var>、<var>银盏</var>、<var>英德</var>、<var>源潭</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 855 个，机器数量达 2620 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-04-16 (v3.8.21)
         <ul>
           <li>新增车站：<var>荆州</var>、<var>酒泉</var>、<var>乐山北</var>、<var>威远</var>、<var>野三关</var>、<var>资中西</var>。</li>
