--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-04-30 (v3.8.22)
+        <ul>
+          <li>新駅：<var>花山鎮</var>、<var>金口河南</var>、<var>楽同</var>、<var>清城</var>、<var>狮嶺</var>、<var>銀盏</var>、<var>英徳</var>、<var>源潭</var>。</li>
+          <li>記録した駅組 31 個、駅 855 個、機器 2620 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-04-16 (v3.8.21)
         <ul>
           <li>新駅：<var>荆州</var>、<var>酒泉</var>、<var>楽山北</var>、<var>威遠</var>、<var>野三关</var>、<var>資中西</var>。</li>
