--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -54,7 +54,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 3 月 30 日版本</a></p>
+    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 4 月 30 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -139,10 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-04-16 (v3.8.21)
+        2024-04-30 (v3.8.22)
         <ul>
-          <li>新增车站：<var>荆州</var>、<var>酒泉</var>、<var>乐山北</var>、<var>威远</var>、<var>野三关</var>、<var>资中西</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 847 个，机器数量达 2600 台。</li>
+          <li>新增车站：<var>花山镇</var>、<var>金口河南</var>、<var>乐同</var>、<var>清城</var>、<var>狮岭</var>、<var>银盏</var>、<var>英德</var>、<var>源潭</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 855 个，机器数量达 2620 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
